# ouroboros

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  OUROBOROS.md  PLAN.md  PROJECTS.md  README.md  env.example  notion_bootstrap.py  notion_client_lib.py  pyproject.toml
.claude/commands/: feature.md  project-page.md
.claude/hooks/: check-auto-dev.sh
.github/workflows/: health-ping.yml  lint.yml  release.yml  rtk-badge.yml  upstream-sync.yml
bot/: main.py  requirements.txt
bot/handlers/: ckpt.py  completions.py  crashlog.py  disk.py  feature.py  logs.py  metrics.py  note.py  page.py  qr.py  research.py  run.py  status.py  stop.py  sync.py  team.py  update.py
bot/services/: config.py  disk_state.py  notion.py  page.py  ssh.py  team.py  tg.py
research/: tthresh-assessment.md
scripts/: auto-dev.sh  tg-organize.py
team/: LEADER.md  README.md  WORKER.md  config.yaml
team/results/: 001.md  002.md  003.md
team/tasks/: .template.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  018-precommit-ruff.yaml
