[project]
name = "ouroboros"
version = "6.32.0"
description = "Research governance protocol — Telegram bot, multi-agent orchestration, CI/CD"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "python-dotenv>=1.0",
    "notion-client>=2.0",
    "Pillow>=10.0",
    # qr-mosaic is a local package — install manually: pip install artifacts/qr-mosaic
    "Telethon>=1.36",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.0", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"bot/handlers/completions.py" = ["E501"]
